test to prevent horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,6 @@ body {
 }
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   transition: initial;
 }
 .abcclass {
